로컬 개발용 https 적용 위한 설정. build.gradle 과 같은 위치 (root폴더 바로 아래) 에 pem 인증서 넣고 application-database.properties 파일에 server.port=8443 server.ssl.enabled=true server.ssl.certificate=dev.golf.com+3.pem server.ssl.certificate-private-key=dev.golf.com+3-key.pem 추가.
윈도우 설정에 host 에서 dev.golf.com 추가
개발 및 테스트 https://dev.golf.com:3000으로